@@ -1,4 +1,4 @@
-# 🎓 Système de Gestion des Stages (StagEASE)
+# 🎓 Système de Gestion des Stages
 
 Une application JavaFX complète pour la gestion des stages en entreprise, développée avec Maven et MySQL.
 
@@ -6,6 +6,7 @@ Une application JavaFX complète pour la gestion des stages en entreprise, déve
 ![JavaFX](https://img.shields.io/badge/JavaFX-21-blue)
 ![MySQL](https://img.shields.io/badge/MySQL-8.0-blue)
 ![Maven](https://img.shields.io/badge/Maven-3.6+-green)
+![License](https://img.shields.io/badge/License-MIT-yellow)
 
 ## 📋 Table des matières
 
@@ -68,7 +69,7 @@ Ce système permet de gérer efficacement le processus complet des stages en ent
 
 Assurez-vous d'avoir installé :
 
-```bash
+\\\`bash
 # Java 17 ou supérieur
 java -version
 
@@ -77,3 +78,228 @@ mvn -version
 
 # MySQL 8.0 ou supérieur
 mysql --version
+\\\`
+
+### Étapes d'installation
+
+1. *Cloner le repository*
+\\\`bash
+git clone https://github.com/votre-username/gestion-stages.git
+cd gestion-stages
+\\\`
+
+2. *Configurer MySQL*
+\\\`bash
+# Démarrer MySQL
+sudo systemctl start mysql  # Linux
+brew services start mysql   # macOS
+
+# Se connecter à MySQL
+mysql -u root -p
+\\\`
+
+3. *Créer la base de données*
+\\\`bash
+# Exécuter les scripts de création
+mysql -u root -p < scripts/create-database-final.sql
+mysql -u root -p < scripts/insert-data-final.sql
+\\\`
+
+4. *Configurer la connexion* (si nécessaire)
+
+Modifier src/main/java/com/gestionstages/util/DatabaseConnection.java :
+\\\`java
+private static final String URL = "jdbc:mysql://localhost:3306/gestion_stages";
+private static final String USERNAME = "root";
+private static final String PASSWORD = "votre_mot_de_passe";
+\\\`
+
+5. *Compiler et lancer*
+\\\`bash
+# Compiler le projet
+mvn clean compile
+
+# Lancer l'application
+mvn javafx:run
+\\\`
+
+## ⚙ Configuration
+
+### Variables d'environnement (optionnel)
+
+\\\`bash
+export DB_HOST=localhost
+export DB_PORT=3306
+export DB_NAME=gestion_stages
+export DB_USER=root
+export DB_PASSWORD=votre_mot_de_passe
+\\\`
+
+### Configuration IDE
+
+Pour *IntelliJ IDEA* :
+1. Importer le projet Maven
+2. Configurer le SDK Java 17+
+3. Ajouter les modules JavaFX dans les VM options :
+\\\`
+--module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml
+\\\`
+
+## 🎮 Utilisation
+
+### Démarrage
+
+1. Lancer l'application avec mvn javafx:run
+2. Se connecter avec un des comptes de test
+3. Naviguer dans l'interface selon votre rôle
+
+### Navigation
+
+- *Dashboard* : Vue d'ensemble et navigation principale
+- *Candidatures* : Gestion des candidats et candidatures
+- *Stages* : Création et gestion des stages
+- *Stagiaires* : Suivi des stagiaires en cours
+
+## 👥 Comptes de test
+
+### Responsable du Personnel
+\\\`
+Email: marie.dupont@entreprise.com
+Mot de passe: password123
+\\\`
+
+### Responsables de Stages
+\\\`
+Email: pierre.martin@entreprise.com
+Mot de passe: password123
+
+Email: sophie.durand@entreprise.com
+Mot de passe: password123
+
+Email: jean.bernard@entreprise.com
+Mot de passe: password123
+\\\`
+
+## 📁 Structure du projet
+
+\\\`
+gestion-stages/
+├── 📄 pom.xml                          # Configuration Maven
+├── 📄 README.md                        # Ce fichier
+├── 📁 scripts/                         # Scripts SQL
+│   ├── create-database-final.sql       # Création de la base
+│   └── insert-data-final.sql           # Données de test
+├── 📁 src/
+│   └── 📁 main/
+│       ├── 📁 java/
+│       │   └── 📁 com/gestionstages/
+│       │       ├── 📄 MainApplication.java     # Point d'entrée
+│       │       ├── 📁 controller/              # Contrôleurs JavaFX
+│       │       ├── 📁 dao/                     # Accès aux données
+│       │       ├── 📁 model/                   # Modèles de données
+│       │       └── 📁 util/                    # Utilitaires
+│       └── 📁 resources/
+│           └── 📁 fxml/                        # Fichiers FXML
+└── 📁 target/                          # Fichiers compilés (généré)
+\\\`
+
+## 🐛 Dépannage
+
+### Problèmes courants
+
+*Erreur de connexion MySQL*
+\\\`bash
+# Vérifier que MySQL est démarré
+sudo systemctl status mysql
+
+# Recréer la base de données
+mysql -u root -p < scripts/create-database-final.sql
+\\\`
+
+*Erreur JavaFX*
+\\\`bash
+# Ajouter les modules JavaFX
+mvn javafx:run -Djavafx.args="--add-modules javafx.controls,javafx.fxml"
+\\\`
+
+*Erreur de compilation*
+\\\`bash
+# Nettoyer et recompiler
+mvn clean compile
+\\\`
+
+*Fichiers FXML non trouvés*
+\\\`bash
+# Forcer la copie des ressources
+mvn clean resources:resources compile
+\\\`
+
+## 📊 Base de données
+
+### Tables principales
+
+- *utilisateurs* : Comptes et authentification
+- *ecoles* : Établissements partenaires  
+- *stages* : Offres de stage
+- *candidats* : Étudiants candidats
+- *candidatures* : Candidatures aux stages
+- *stagiaires* : Stagiaires acceptés
+
+### Sauvegarde
+
+\\\`bash
+# Créer une sauvegarde
+mysqldump -u root -p gestion_stages > backup_$(date +%Y%m%d).sql
+
+# Restaurer une sauvegarde
+mysql -u root -p gestion_stages < backup_20240101.sql
+\\\`
+
+## 🤝 Contribution
+
+1. Fork le projet
+2. Créer une branche feature (git checkout -b feature/nouvelle-fonctionnalite)
+3. Commiter les changements (git commit -am 'Ajout nouvelle fonctionnalité')
+4. Push vers la branche (git push origin feature/nouvelle-fonctionnalite)
+5. Créer une Pull Request
+
+### Standards de développement
+
+- Respecter l'architecture MVC
+- Commenter le code complexe
+- Tester les nouvelles fonctionnalités
+- Suivre les conventions Java
+
+## 📈 Roadmap
+
+- [ ] Interface web avec Spring Boot
+- [ ] API REST
+- [ ] Notifications par email
+- [ ] Génération de rapports PDF
+- [ ] Tableau de bord avec statistiques
+- [ ] Module de gestion des entreprises
+- [ ] Système de notation avancé
+
+## 📄 Licence
+
+Ce projet est sous licence MIT. Voir le fichier [LICENSE](LICENSE) pour plus de détails.
+
+## 📞 Support
+
+- 🐛 *Issues* : [GitHub Issues](https://github.com/votre-username/gestion-stages/issues)
+- 📧 *Email* : votre.email@exemple.com
+- 📖 *Documentation* : [Wiki du projet](https://github.com/votre-username/gestion-stages/wiki)
+
+## 🏆 Auteurs
+
+- *Votre Nom* - Développeur principal - [@votre-username](https://github.com/votre-username)
+
+## 🙏 Remerciements
+
+- Équipe de développement
+- Testeurs et contributeurs
+- Communauté JavaFX
+
+---
+
+⭐ *N'hésitez pas à donner une étoile si ce projet vous a aidé !*
